<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:id="@+id/layout_login_activity"
    android:background="?attr/colorPrimaryVariant"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/welcome"
        android:contentDescription="@string/welcome" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:padding="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="?attr/colorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_test_login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="@dimen/text_small"
                android:background="@drawable/bg_edittext"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/edittext_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:passwordToggleEnabled="true"
            android:textColorHint="?attr/colorSecondary"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_test_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_small"
                android:background="@drawable/bg_edittext"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/edittext_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/text_small"
            android:textAlignment="textEnd"
            android:layout_margin="10dp"
            android:selectAllOnFocus="false"
            android:linksClickable="true"
            android:autoLink="all"
            android:visibility="gone"/>


    </LinearLayout>

    <com.royrodriguez.transitionbutton.TransitionButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/text_large"
        android:textColor="@android:color/black"
        android:backgroundTint="@drawable/bg_button"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/tv_create_account"/>

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:padding="10dp"/>



</RelativeLayout>