<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    android:theme="@style/Theme.MyApplication">

        <ImageView
            android:id="@+id/register_close"
            android:layout_width="@dimen/touch_area_height"
            android:layout_height="@dimen/touch_area_width"
            android:layout_gravity="start"
            android:src="@drawable/ic_close"
            android:padding="12dp"
            app:tint="@color/white"
            android:contentDescription="@string/close" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_full_name"
            android:textColorHint="?attr/colorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_test_register_full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/full_name"
                android:inputType="textCapWords"
                android:textSize="@dimen/text_small"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edittext"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/edittext_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_email"
            android:textColorHint="?attr/colorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_test_register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_small"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edittext"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/edittext_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_password"
            app:passwordToggleEnabled="true"
            android:textColorHint="?attr/colorSecondary"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_test_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_small"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edittext"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/edittext_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_confirm_password"
            app:passwordToggleEnabled="true"
            android:textColorHint="?attr/colorSecondary"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_test_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_small"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edittext"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/edittext_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.royrodriguez.transitionbutton.TransitionButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/text_large"
            android:textColor="@android:color/black"
            android:text="@string/create_account"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:background="@drawable/bg_button"
            app:backgroundTint="?attr/colorSecondaryVariant"
            android:layout_marginBottom="20dp" />

</LinearLayout>